--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Histórico de revisões do módulo Net::MundiPagg
 
+0.0.3               2014-10-27
+                        - Fixando versões das dependências
+
 0.0.2               2014-10-26
                         - Removendo AUTOLOAD
 
